ensure spacing without resorting to monospace font

--- a/app/css/index.css
+++ b/app/css/index.css
@@ -19,6 +19,11 @@ body {
 }
 
 #time {
-  font-family: monospace;
   vertical-align: middle;
+}
+
+#time > span {
+  display: inline-block;
+  width: 0.7em;
+  text-align: center;
 }
